made some changes

--- a/Manuscrist/Manuscrit/bibManuscrit.bib
+++ b/Manuscrist/Manuscrit/bibManuscrit.bib
@@ -14,6 +14,18 @@
   Publisher                = {American Society for Microbiology (ASM)}
 }
 
+@Article{cao2004efficient,
+  Title                    = {Efficient formulation of the stochastic simulation algorithm for chemically reacting systems},
+  Author                   = {Cao, Yang and Li, Hong and Petzold, Linda},
+  Journal                  = {The journal of chemical physics},
+  Year                     = {2004},
+  Number                   = {9},
+  Pages                    = {4059--4067},
+  Volume                   = {121},
+
+  Publisher                = {AIP Publishing}
+}
+
 @Article{chauvin1994constitution,
   Title                    = {Constitution and monitoring of an epidemiological surveillance network with sentinel general practitioners},
   Author                   = {Chauvin, Pierre},
@@ -114,6 +126,16 @@
 
   Author                   = {Henderson, Donald A},
   Year                     = {2001}
+}
+
+@InProceedings{kurata2001feedback,
+  Title                    = {Feedback regulation of the heat shock response in E. coli},
+  Author                   = {Kurata, Hiroyuki and El-Samad, Hana and Yi, T-M and Khammash, Mustafa and Doyle, J},
+  Booktitle                = {Decision and Control, 2001. Proceedings of the 40th IEEE Conference on},
+  Year                     = {2001},
+  Organization             = {IEEE},
+  Pages                    = {837--842},
+  Volume                   = {1}
 }
 
 @Article{li2007stochastic,
